# otterai-api

./: .git-blame-ignore-revs  .gitignore  LICENSE  Makefile  README.md  otterai.py  pyproject.toml  setup.py
.github/workflows/: test.yml
otterai/: __init__.py  exceptions.py  otterai.py
tests/: helpers.py  test_exceptions.py  test_otterai.py
