[project]
name = "otterai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests",
    "requests_toolbelt",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]
